Feat:[GV&HS]:Logic cap nhat diem cho HS